--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,46 +9,8 @@
     android:padding="20dp"
     tools:context=".MainActivity">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <edu.arbelkilani.compass.Compass
-            android:id="@+id/compass_1"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            app:degree_color="@color/blue"
-            app:degrees_step="5"
-            app:needle="@drawable/ic_needle_2"
-            app:orientation_labels_color="@color/red"
-            app:show_degree_value="false"
-            app:show_orientation_labels="true" />
-
-        <edu.arbelkilani.compass.Compass
-            android:id="@+id/compass_2"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_alignBaseline="@+id/compass_1"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="40dp"
-            app:degrees_step="45"
-            app:show_border="true"
-            app:show_degree_value="true"
-            app:show_orientation_labels="false" />
-
-    </RelativeLayout>
-
     <edu.arbelkilani.compass.Compass
-        android:id="@+id/compass_3"
-        android:layout_width="270dp"
-        android:layout_height="270dp"
-        android:layout_marginTop="20dp"
-        app:degree_color="@color/colorPrimary"
-        app:needle="@drawable/ic_needle_1"
-        app:orientation_labels_color="@color/colorAccent"
-        app:show_degree_value="true"
-        app:show_orientation_labels="true" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
